# Nav-Combat-Workspace

./: README.md
ackermann_recovery/: CMakeLists.txt  ackermann_recovery_plugin.xml  package.xml
ackermann_recovery/include/ackermann_recovery/: ackermann_recovery.hpp
ackermann_recovery/src/: ackermann_recovery.cpp
area_checker/: CMakeLists.txt  package.xml
area_checker/config/: polygons.yaml  recorded_areas copy.yaml  recorded_areas.yaml
area_checker/launch/: check_area.launch  record_area.launch  test.launch
area_checker/rviz/: area.rviz
area_checker/src/: area_checker.cpp  area_recorder.cpp  polygon_checker.cpp
clear_costmap_recovery/: CMakeLists.txt
cmu_local_planner/: CMakeLists.txt  package.xml
cmu_local_planner/launch/: local_planner.launch  path_follower.launch
cmu_local_planner/src/: pathFollower.cpp
decaying_obstacle_layer/: CMakeLists.txt  package.xml
decaying_obstacle_layer/include/decaying_obstacle_layer/: decaying_obstacle_layer.h
decaying_obstacle_layer/src/: decaying_obstacle_layer.cpp
decaying_obstacle_layer/test/: clock.launch  clock.py
decision_behavior_tree/: CMakeLists.txt  package.xml
decision_behavior_tree/behavior_tree/: main_tree copy 2.xml  main_tree.xml  main_tree_default.xml  main_tree_pp.xml  main_tree_tested.xml  test.xml
decision_behavior_tree/include/decision_behavior_tree/: change_goal_tolerance_action.hpp  change_pid_speed_action.hpp  compare_bigger_int_action.hpp  delay_seconds_action.hpp  gimbal_cruise_action.hpp  if_detect_target_action.hpp  if_equal_action.hpp  if_equal_int_action.hpp  if_in_goal_tolerance_action.hpp  is_aiming_target_action.hpp  move_base_action_node.hpp  print_action.hpp  pub_goto_material_action.hpp  purepursuit_action.hpp  subscriber_callbacks.hpp  switch_goal_to_action.hpp  switch_next_goal_action.hpp  wait_shoot_action.hpp  wait_voice_action.hpp
decision_behavior_tree/launch/: bt_launch.launch
decision_behavior_tree/param/: material_goal_poses.yaml  seq_goal_poses.yaml
decision_behavior_tree/src/: main.cpp
donothing_local_planner/: CMakeLists.txt  donothing_local_planner_plugin.xml  package.xml
donothing_local_planner/include/donothing_local_planner/: donothing_local_planner.h
donothing_local_planner/param/: donothing_local_planner.yaml
donothing_local_planner/src/: donothing_local_planner.cpp
dzactuator/: CMakeLists.txt  package.xml
dzactuator/include/: dzactuator.h
dzactuator/launch/: all_launch.launch  amcl.launch  bringup.launch  dznavigation.launch  gmapping.launch
dzactuator/param/: costmap_common.yaml  donothing_local_planner.yaml  global_costmap.yaml  local_costmap.yaml  move_base_planner.yaml  teb_local_planner.yaml
dzactuator/src/: dzactuator.cpp
dzjudgment/: CMakeLists.txt
dzjudgment/src/: judgment.cpp  judgment.h
dzsavepath/: CMakeLists.txt
dzsavepath/src/: savepath.cpp  savepath.h
hybrid_astar_planner/: CMakeLists.txt
hybrid_astar_planner/include/: constants.h  hybrid_astar.h
hybrid_astar_planner/src/: hybrid_astar.cpp  planner_core.cpp
hybrid_astar_planner/test_the_plugin/launch/: config.rviz
hybrid_astar_planner/test_the_plugin/src/: test_plugins.cpp
jie_ware/: CMakeLists.txt  package.xml
jie_ware/cfg/: SimpleKalmanParams.cfg
jie_ware/include/jie_ware/: simpleKalmanFilter.hpp
jie_ware/launch/: lidar_filter.launch  lidar_loc.launch
jie_ware/src/: lidar_filter_node.cpp  lidar_loc copy.cpp  lidar_loc.txt
laser_aimer/: CMakeLists.txt  package.xml
laser_aimer/launch/: laser_aimer.launch
laser_aimer/param/: roi_polygon.yaml
laser_aimer/src/: laser_aimer_node.cpp  point_sync_node.cpp
move_base/: CMakeLists.txt
navigation_msgs/map_msgs/: CMakeLists.txt
navigation_msgs/move_base_msgs/: CMakeLists.txt
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/include/pure_pursuit/: path_checker.hpp
pure_pursuit/launch/: bringup.launch  path_publisher.launch  pure_pursuit.launch
pure_pursuit/src/: path_publisher.cpp  pure_pursuit.cpp
resource/maps/: newmap 20250718场地.pgm  newmap 20250718场地.yaml  newmap 20250718场地p.pgm  newmap.pgm
resource/road_paths/: 0_1.txt  0_10.txt  0_11.txt  0_12.txt  0_13.txt  0_14.txt  0_15.txt  0_16.txt  0_17.txt  0_2.txt  0_20.txt  0_21.txt  0_3.txt  0_4.txt  0_5.txt  0_6.txt  0_8.txt  0_9.txt  1.txt  10_0.txt  11_0.txt  12_0.txt  14_0.txt  15_0.txt  16_0.txt  17_0.txt  18_0.txt  19_0.txt  1_0.txt  2.txt  20_0.txt  2_0.txt  3_0.txt  4_0.txt  5_0.txt  6_0.txt  7_0.txt
rknn_pt/: CMakeLists.txt
rplidar_ros/launch/: rplidar_s3e.launch
rplidar_ros/src/: node.cpp
some_msgs/: CMakeLists.txt  package.xml
some_msgs/msg/: Goods.msg  Motor.msg  Motors.msg
transformer_servo/: CMakeLists.txt  package.xml
transformer_servo/launch/: bringup.launch  material_processor.launch  material_tf_puber.launch
transformer_servo/src/: angular_to_angle.cpp  bond.cpp  cmd_vel_to_angle.cpp  control_gimbal_to_material.cpp  gimbal_tf.cpp  material_processor.cpp  material_tf_puber.cpp  pub_robot_state.cpp  scan_to_pcl2.cpp  teb_tolerance_changer.cpp
